--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <p>Git Demo</p>
+    <p>Inside feature branch</p>
 </head>
 <body>
     
