--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <p>Git Demo</p>
     <p>Inside feature branch</p>
+    <p>GIT -  is a software for tracking changes in any set of files, usually used for coordinating work among programmers collaboratively developing source code during software development. Its goals include speed, data integrity, and support for distributed, non-linear workflows</p>
 </head>
 <body>
     
